# sentinel-ai

./: LICENSE  README.md  pyproject.toml
examples/: chatbot.py  evolution_demo.py  full_organism.py  proxy_quickstart.py  proxy_routing_test.py  proxy_savings_demo.py  quickstart.py  rag_pipeline.py  roi_calculator.py  swarm_demo.py  voice_agent.py
sentinel/: __init__.py  organism.py
sentinel/capabilities/: __init__.py  chameleon.py  octopus.py  salamander.py  swarm.py  tardigrade.py
sentinel/core/: __init__.py  correlation.py  detection.py  event_bus.py  ewma.py  persistence.py  state_machine.py  types.py
sentinel/integrations/: __init__.py  exporters.py  fastapi_middleware.py  langchain.py  openai_client.py  openai_wrapper.py  webhooks.py
sentinel/performance/: __init__.py  auto_optimize.py  collective_intelligence.py  experience_engine.py  smart_router.py  trust_score.py
sentinel/proxy/: __init__.py  config.py  dashboard.py  middleware.py  openai_compat.py  provider_clients.py  server.py
sentinel/server/: __init__.py  api.py  dashboard.py
sentinel/systems/: __init__.py  circulatory.py  digestive.py  endocrine.py  immune.py  lymph.py  memory.py  nervous.py  pain.py  reproductive.py  respiratory.py  skin.py  swarm.py
sentinel/transcendence/: __init__.py  immortal.py  oracle.py  phoenix.py  telepathy.py
tests/: README.md  conftest.py  test_ewma.py  test_immune.py  test_nervous.py  test_organism.py  test_swarm.py
tests/integration/: test_cascade_event_bus.py  test_full_healing_cascade.py  test_immune_endocrine_loop.py  test_organism_lifecycle.py  (+4 more)
(+41 files in other folders)
