[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentinel-ai"
version = "0.5.0"
description = "The Immune System for AI. Your AI has a brain — we give it a body."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Tim von Sachs" }]
keywords = ["ai", "monitoring", "self-healing", "drift-detection", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/timvonsachs/sentinel-ai"
Documentation = "https://sentinel-ai.dev"
Repository = "https://github.com/timvonsachs/sentinel-ai"

[project.optional-dependencies]
proxy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["sentinel*"]
